# MOWNiT

lab1/: Mownit-Lab1.ipynb  a.out
lab2/: CMakeLists.txt  Mownit-Lab2.ipynb  main.c  result.csv
lab2/.ipynb_checkpoints/: Mownit-Lab2-checkpoint.ipynb
lab3/: CMakeLists.txt  Mownit_Lab3.ipynb  c_result.csv  c_result_o3.csv  main.c
lab3/.ipynb_checkpoints/: Mownit_Lab3-checkpoint.ipynb
lab5/: lab5.ipynb  notebook.tex
lab5/.ipynb_checkpoints/: lab5-checkpoint.ipynb
lab6/: fractal.ipynb  lab6.ipynb
lab6/.ipynb_checkpoints/: fractal-checkpoint.ipynb  lab6-checkpoint.ipynb
lab7/.ipynb_checkpoints/: Mownit_lab8-checkpoint.ipynb
lab8/: Mownit_lab8.ipynb
lab8/.ipynb_checkpoints/: Mownit_lab8-checkpoint.ipynb
r_mownit/: .RData  .Rhistory  Untitled.Rmd  Untitled.nb.html  c_result.csv  lab4.R  lab4_R.Rmd  lab4_R.nb.html
